codesubission/Task-1/Azure/subnet.tf
resource "azurerm_subnet" "subnet" {
  name                 = "capstone-subnet"
  resource_group_name  = azurerm_resource_group.rg.name
  virtual_network_name = azurerm_virtual_network.vnet.name
  address_prefixes     = ["10.1.1.0/24"]
}
