codesubission/Task-1/Azure/vnet.tf
resource "azurerm_virtual_network" "vnet" {
  name                = "capstone-vnet"
  location            = azurerm_resource_group.rg.location
  resource_group_name = azurerm_resource_group.rg.name
  address_space       = ["10.1.0.0/16"]
}
